--- a/tests/notebooks/calc_opt_flow_pyr_lk.ipynb
+++ b/tests/notebooks/calc_opt_flow_pyr_lk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -21,10 +21,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f405456d870>"
+       "<matplotlib.image.AxesImage at 0x7f40543f45b0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
